[project]
name = "15-min-city-api"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.*"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.121.2",
    "geojson>=3.2.0",
    "r5py>=1.0.7",
    "sqlalchemy>=2.0.45",
    "toml>=0.10.2",
    "uvicorn>=0.38.0",
]

